1.4.2: Update to Java 21